<resources>
    <string name="app_name">Astropedia</string>
    <string name="admob_key" translatable="false">ca-app-pub-2881420955312303~4489151291</string>
    <string name="interstitial_id" translatable="false">ca-app-pub-2881420955312303/8314853846</string>
    <string name="banner_id" translatable="false">ca-app-pub-2881420955312303/6923742949</string>
    <string name="native_ad" translatable="false">ca-app-pub-2881420955312303/8731648632</string>
    <string name="reward_video" translatable="false">ca-app-pub-2881420955312303/3926044513</string>
    <string name="yam_id" translatable="false">22acc77d-d70e-4ae7-a529-44366e9ed22f</string>
    <string name="amplitude_id">751a9cc2aa612a06962e62e5e1f3b38d</string>
    <string name="fender_id">nMMITxQP2vlSvBuuHLxNDrQxRpw2r21I</string>
    <string name="qonversion_id">rUC-czxB0dMVbaQHM8LOuRtZ1RQr2BE9</string>
    <string name="release_user_expirior_id">8c61caf3-a16c-40a0-be6a-ed6e73161265</string>
    <string name="debug_user_expirior_id">57935308-52c4-4081-bc71-1cf37f6b9b55</string>
    <string name="facebook_app_id">448083649486159</string>
    <string name="fb_login_protocol_scheme">fb448083649486159</string>
    <string name="uxcam_id" translatable="false">9xbgtoyhh5e4oip</string>
    <string-array name="names_signs">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    <string name="fix_string">â¨Mark down the best dates for your zodiac sign with your %s Monthly Horoscope! â¨</string>
    <string-array name="titles_property">
        <item>Love</item>
        <item>Career</item>
        <item>Health</item>
        <item>Money</item>
    </string-array>
    <string name="splash_title">Astropedia</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="text_title">We will customize the horoscope for you personally</string>
    <string name="name">Name</string>
    <string name="birth">Date of birth</string>
    <string name="bottom_text">You can change the data later in the settings</string>
    <string name="cancel_date_picker">CANCEL</string>
    <string name="ok_date_picker">OK</string>
    <string name="remove_ads">Remove ADS</string>
    <string name="prem4">3 days for free.</string>
    <string name="prem5">Further subscription for a month</string>
    <string name="prem_set">Premium</string>
    <string name="empty_prem">Remove ADS</string>
    <string name="date_title">Date of birthday</string>
    <string name="notifications">Notifications</string>
    <string name="notif_time_title">Receive notifications</string>
    <string name="you_have_subscribed">You have subscribed</string>
    <string name="ok_alert">OK</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="today_apos_s_matches">Today\'s matches</string>
    <string name="friendship">Friendship</string>
    <string name="career">Career</string>
    <string name="general_mood">General Mood</string>
    <string name="sex">Sex</string>
    <string name="hustle">Hustle</string>
    <string name="vibe">Vibe</string>
    <string name="success">Success</string>
    <string name="settings">Settings</string>
    <string name="week">Week</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_internet_connection">Check your internet connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="check_connection">Сheck your internet connection</string>
    <string-array name="notifications_text">
        <item>An incredible adventure awaits you today</item>
        <item>You need to be careful today...</item>
        <item>Beware of a dirty trick from a loved one!</item>
        <item>Today you are lucky...</item>
        <item>The planets speak of great success...</item>
    </string-array>
    <string name="d_of_d">%d of %d</string>
    <string name="tap_ball">Tap to ball</string>
    <string name="ask">Ask the question</string>
    <string name="answer_init">\?</string>
    <string name="access_will">Access will open through:</string>
    <string name="alert_title">The limit of questions has been reached</string>
    <string name="or">or</string>
    <string name="connect_premium">Connect PREMIUM and get:</string>
    <string name="full_access">Full access</string>
    <string name="no_ads">No ADS</string>
    <string name="get_premium">Get Premium</string>
    <string name="premium">Premium</string>
    <string name="get_vip">Get vip version</string>
    <string name="hour_short">h</string>
    <string-array name="answers">
        <item>No\ndoubt</item>
        <item>Very\nlikely</item>
        <item>Count\non it</item>
        <item>Ask\nlater</item>
        <item>No</item>
        <item>Yes</item>
        <item>Go for\nit</item>
        <item>Wait for\nit!</item>
        <item>Certainly</item>
        <item>Cannot tell\nnow</item>
        <item>I think\nyes</item>
        <item>I think\nno</item>
    </string-array>
    <string name="time_format" translatable="false">%02d:%02d:%02d</string>
    <string name="horoscope">Horoscope</string>
    <string name="magic_ball">Magic Ball</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="off_ads">OFF ADS</string>
    <string name="get_a_premium_subscription">Get a premium subscription</string>
    <string name="full_information_is_available_by_subscription">Full information is available by subscription</string>
    <string name="get_access">Get Access</string>
    <string name="no_advertising">No advertising</string>
    <string name="full_access_to_horoscopes">Full access to horoscopes</string>
    <string name="unlimited_questions_to_the_magic_ball">Unlimited questions to the magic ball</string>
    <string name="try_free_trial">Try Free Trial</string>
    <string name="maybe_later">Maybe later</string>
    <string-array name="onboard_titles">
        <item>No advertising</item>
        <item>Full access to Horoscopes</item>
        <item>Unlimited questions to the magic ball</item>
    </string-array>
    <string name="first_part_notif">Your</string>
    <string name="second_part_notif">horoscope is ready! Click to learn more</string>
    <string name="evening_alarm">Still don\'t know what destiny prepared to you? So what are you waiting for?</string>
    <string name="smartlock_id">38454c9ae3f96aeb13b1519d148028a8000d7b64</string>
    <string name="your_personal_horoscope">Your personal horoscope</string>
    <string name="tips_and_predictions_for_every_day">Tips and predictions for every day</string>
    <string name="to_stories">To stories</string>
    <string name="my_horoscope_on">My Horoscope on</string>
    <string name="shop_title">Crystal shop</string>
    <string-array name="stories_onboard_texts">
        <item>Добро пожаловать в мир магических кристаллов!</item>
        <item>Каждый кристалл наделен особой магией. Он поможет тебе восполнить энергию в сферах твоей жизни</item>
        <item>Выбирая себе кристалл, ты активируешь силу, которая будет помогать тебе реализовываться день за днем</item>
        <item>Ты можешь зарядиться от кристалла, тем самым усилив его влияющее воздействие на сферы твоей жизни. Ты станешь еще более уверенным в себе</item>
        <item>Попробуй. Ты определенно увидишь положительные изменения в своей жизни. Поверь в себя и силу кристалла!</item>
    </string-array>
    <string-array name="prices">
        <item>no_ads_start</item>
        <item>premium_24.9</item>
        <item>premium_49.9</item>
        <item>premium_99.9</item>
    </string-array>
    <string-array name="crystals_names">
        <item>Ametist</item>
        <item>Garnet</item>
        <item>Icelandic spar</item>
        <item>Lapis lazuli</item>
        <item>Malachite</item>
        <item>Rose quartz</item>
        <item>Schorl</item>
        <item>Fluorite</item>
    </string-array>
    <string-array name="crystals_prop">
        <item>Health</item>
        <item>Power and strength</item>
        <item>Intuition</item>
        <item>Success</item>
        <item>Charm</item>
        <item>Love</item>
        <item>Wealth</item>
        <item>Calm</item>
    </string-array>
    <string name="start_text_prem">7 days trial period. After</string>
    <string name="end_text_prem">per month. You can manage your subscription in your Google Play account</string>
    <string name="whole_text_prem">7 days trial period. After 4 USD. per month. You can manage your subscription in your Google Play account</string>
    <string name="prem41">7 days for free.</string>
    <string name="prem51">Further subscription for a month</string>
    <string name="prem61">Further subscription for a month 4 USD</string>
    <string name="ads_blocking">Ads Blocking</string>
    <string name="no_more_annoying_ads">No more annoying ADS</string>
    <string name="premtest_excuse_us_please">Excuse us please!</string>
    <string name="premtest_we_didn_t_want">We didn’t want to, but we had to add ads in order to be able to continue maintaining and developing our application, leaving it free of charge.</string>
    <string name="premtest_skip">I understand</string>
    <string name="premtest_buy">Disable ads</string>
    <string name="special_one_time_offer">Special one-time offer</string>
    <string name="wait">Wait!</string>
    <string name="if_you_complete_your_purchase_directly_now">If you complete your purchase directly now, you will get a discount</string>
    <string name="continue_without_ads">Continue without ads</string>
    <string name="searching_palm">Searching palm</string>
    <string name="searching_palm_enabled">Palm detected</string>
    <string name="scan_your_palm_to_know_your_fate">Scan your palm to know your fate!</string>
    <string name="head">Head</string>
    <string name="life">Life</string>
    <string name="heart">Heart</string>
    <string name="take_a_photo_of_your_left_hand">Take a photo of your left hand.</string>
    <string name="your_hand_must_be_placed_in_the_frame">Your hand must be placed in the frame</string>
    <string name="skip">Skip</string>
    <string name="scan">Scan</string>
    <string name="accurate_daily_monthly_and_yearly_horoscopes">Accurate Daily, Monthly and Yearly Horoscopes</string>
    <string name="lucky_numbers_zodiac_compatibility"><![CDATA[Lucky Numbers & Zodiac Compatibility]]></string>
    <string name="palm_reader">Palm Reader</string>
    <string name="daily_notifications">Daily Notifications</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="cancel_anytime"><u>Terms of use</u></string>
    <string name="after_trial_ends_449_00_week">How your Free Trial works
Start your full access to all scientific knowledge today.
Day 3
You will pay today, cancel any time before then.
3 days free, then %s/month</string>
    <string name="prem_onboard_info">Hi %s! You’re a true %s</string>
</resources>