<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_stars">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@drawable/camera_onboard_head" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/muller_medium"
                android:text="@string/prem_onboard_info"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="42dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="43dp"
                    android:drawableStart="@drawable/ic_star_prem_camera"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/muller"
                    android:text="@string/accurate_daily_monthly_and_yearly_horoscopes"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:drawableStart="@drawable/ic_star_prem_camera"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/muller"
                    android:text="@string/lucky_numbers_zodiac_compatibility"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:drawableStart="@drawable/ic_star_prem_camera"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/muller"
                    android:text="@string/palm_reader"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:drawableStart="@drawable/ic_star_prem_camera"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/muller"
                    android:text="@string/daily_notifications"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal" />

            </LinearLayout>


            <Button
                android:id="@+id/btnTrial"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_free_trial"
                android:fontFamily="@font/muller_medium"
                android:paddingStart="65dp"
                android:paddingEnd="65dp"
                android:text="@string/start_free_trial"
                android:textAllCaps="false"
                android:textColor="#2a0762"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tvTrial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/muller"
                android:text="@string/after_trial_ends_449_00_week"
                android:textColor="#f4ebfe"
                android:textSize="9sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/muller"
                android:text="@string/cancel_anytime"
                android:textColor="#f4ebfe"
                android:textSize="9sp"
                android:textStyle="normal" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@drawable/ic_close_camera_onboard" />


    </FrameLayout>
</ScrollView>