<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27282D">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_prem_test"
            android:padding="16dp"
            android:layout_gravity="end"
            android:id="@+id/ivClosePrem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="2.6sp"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ads_blocking" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="222dp"
            android:layout_height="222dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            app:srcCompat="@drawable/img_prem_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="1.8sp"
            android:layout_marginTop="18dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_more_annoying_ads"
            />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_buy_button_ads"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="2sp"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/remove_ads"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-light"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="4sp"
            android:text="@string/prem41"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="normal"
            android:visibility="invisible"
            tools:text="3 дня пробный период." />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="4sp"
            android:text="@string/whole_text_prem"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvPriceEnd"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="4sp"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintVertical_bias="0.0" />


    </LinearLayout>
</ScrollView>