<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:background="@color/main_violet">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:letterSpacing="0.06"
        android:lineSpacingExtra="4sp"
        android:text="@string/general_mood"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4sp"
            android:text="@string/sex"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_sex"
            android:drawablePadding="8dp"/>

        <com.wsoteam.horoscopes.view.RatingView
            android:id="@+id/rvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="18dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4sp"
            android:text="@string/hustle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_hustle"
            android:drawablePadding="8dp"/>

        <com.wsoteam.horoscopes.view.RatingView
            android:id="@+id/rvHustle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="18dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4sp"
            android:text="@string/vibe"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_vibe"
            android:drawablePadding="8dp"/>

        <com.wsoteam.horoscopes.view.RatingView
            android:id="@+id/rvVibe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="18dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4sp"
            android:text="@string/success"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_success"
            android:drawablePadding="8dp"/>

        <com.wsoteam.horoscopes.view.RatingView
            android:id="@+id/rvSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="18dp"/>

    </FrameLayout>





</LinearLayout>